--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "deep-web",
     "links"
   ],
+  "ava": {
+    "babel": true
+  },
   "dependencies": {
     "tor-request": "^3.1.0"
   },
   "devDependencies": {
-    "ava": "^1.2.1"
+    "@ava/babel": "^1.0.1",
+    "ava": "^3.5.0"
   }
 }
